fix swagger cors
